4章まで完了

--- a/app/_components/Header/index.module.css
+++ b/app/_components/Header/index.module.css
@@ -16,6 +16,11 @@
   height: 24px;
   width: auto;
 }
+.nav {
+  display: flex;
+  color: #fff;
+  gap: 40px;
+}
 
 @media (max-width: 640px) {
   .header {
